# parameter-golf

./: .gitignore  AGENTS.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: copilot-setup-steps.yml  research-next-candidate.invalid.yml  research-next-candidate.lock.yml  research-next-candidate.md  sync-upstream.lock.yml  sync-upstream.md
b8/ec5c8e6577/: metadata.json
candidates/202603240924_working-qat-mtp/: README.md  train_gpt.py
candidates/202603240950_tied-mtp-lite/: README.md  train_gpt.py
candidates/202603241120_windowed-mtp/: README.md  train_gpt.py
candidates/202603241211_warmstarted-mtp/: README.md  train_gpt.py
candidates/202603241356_spqr-lite-outlier-rows/: README.md  train_gpt.py
candidates/202603241504_activation-aware-export/: README.md  train_gpt.py
candidates/202603241610_forward-mtp-curriculum/: README.md  train_gpt.py
candidates/202603241731_annealed-mtp/: README.md  train_gpt.py
candidates/202603241902_awq-gptq-lite/: README.md  train_gpt.py
candidates/202603242003_awq-lite-gptq/: README.md  train_gpt.py
candidates/202603242104_twohead-mtp/: README.md  train_gpt.py
candidates/202603242207_paired-mlp-bigram8192/: README.md  train_gpt.py
candidates/202603242243_gptq-row-rescue/: README.md  train_gpt.py
candidates/202603242332_curriculum-mtp-bigram4096/: README.md  train_gpt.py
candidates/202603250208_early-bank-share-bigram/: README.md  (+1 more)
rust/train-gpt-rs/: Cargo.toml  README.md
rust/train-gpt-rs/src/: config.rs  data.rs  lib.rs  main.rs  model.rs  quant.rs  sentencepiece.rs  trainer.rs
(+1124 files in other folders)
