[package]
name = "train-gpt-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
nccl = ["cuda", "candle-core/nccl"]

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
candle-nn = "0.9.2"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sentencepiece-model = "0.1.4"

[dev-dependencies]
tempfile = "3.27.0"
